<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_vector"
        android:title="@string/text126" />
    <item
        android:id="@+id/menu_explore"
        android:icon="@drawable/explore_solid"
        android:title="@string/text128" />
    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/bag_shopping_solid"
        android:title="@string/text100" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/user_regular"
        android:title="@string/text129" />
    <item
        android:id="@+id/menu_books"
        android:icon="@drawable/book_open_solid"
        android:title="@string/text93" />
    <item
        android:id="@+id/menu_log_out"
        android:icon="@drawable/logout_svg"
        android:title="@string/text130" />
</menu>