<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text22"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="@+id/cardView2" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text27"
                android:textColor="@color/dark_grey_2"
                app:layout_constraintStart_toStartOf="@+id/textView51"
                app:layout_constraintTop_toBottomOf="@+id/textView51" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/trash_can_regular"
                android:drawablePadding="5dp"
                android:drawableTint="@android:color/holo_red_dark"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/text55"
                android:textColor="?attr/colorError"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text54"
                app:layout_constraintBottom_toBottomOf="@+id/textView57"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView57" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/text39"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView57"
                app:layout_constraintStart_toEndOf="@+id/textView56"
                app:layout_constraintTop_toTopOf="@+id/textView57" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/grey_circle"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/text56"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/textView52" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/grey_circle"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/text47"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView56"
                app:layout_constraintStart_toEndOf="@+id/textView55"
                app:layout_constraintTop_toTopOf="@+id/textView56" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>